// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should call startLogin on button click 1`] = `
<div>
  <button
    onClick={[Function]}
  >
    Login
  </button>
</div>
`;

exports[`should render LoginPage 1`] = `
<div>
  <button>
    Login
  </button>
</div>
`;
